tried to test prod consumer